# datascience-personal-templates

./: .gitignore  README.md
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  Makefile  pyproject.toml
{{cookiecutter.directory_name}}/.github/workflows/: ci.yml
{{cookiecutter.directory_name}}/config/: environment.yml
{{cookiecutter.directory_name}}/notebooks/: 00_example_notebook.ipynb
{{cookiecutter.directory_name}}/scripts/: setup_cli.py
{{cookiecutter.directory_name}}/src/: logging_utils.py  main.py
{{cookiecutter.directory_name}}/tests/: test_main.py
