[project]
name = "{{cookiecutter.project_name.lower().replace(' ', '_')}}"
version = "0.1.0"
description = "Data science template built with uv"
authors = [
    { name = "{{cookiecutter.author_name}}" }
    ]
dependencies = [
    "black",
    "flake8",
    "isort",
    "mypy",
    "interrogate",
    "nbqa",
    "pdoc",
    "pytest",
    "pre-commit",
    "click",
    "ipykernel",
    "pandas",
    "numpy",
    "jupyter",
    "rich",
    "loguru",
    "setuptools"
]

[tool.uv]
# Optional: pin python version
python = ">=3.9"
